--- a/app/src/main/res/layout/activity_test2.xml
+++ b/app/src/main/res/layout/activity_test2.xml
@@ -7,8 +7,8 @@
     tools:context=".test2">
 
     <LinearLayout
-        android:layout_width="412dp"
-        android:layout_height="205dp"
+        android:layout_width="404dp"
+        android:layout_height="338dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -16,7 +16,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="261dp"
+            android:layout_height="69dp"
             android:orientation="horizontal">
 
             <TextView
@@ -32,8 +32,28 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="text"
-                android:text="@string/plain_text1" />
+                android:inputType="text" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="261dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/text_view2" />
+
+            <EditText
+                android:id="@+id/editTextText4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text" />
         </LinearLayout>
     </LinearLayout>
 
