--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -50,7 +50,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/userprofile1" />
+                app:srcCompat="@drawable/userprofile" />
 
         </LinearLayout>
 
