--- a/app/src/main/res/layout/activity_log_in_page.xml
+++ b/app/src/main/res/layout/activity_log_in_page.xml
@@ -128,7 +128,7 @@
                 app:cornerRadius="32dp"/>
 
             <RelativeLayout
-                android:layout_width="228dp"
+                android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center">
 
@@ -145,6 +145,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="-11dp"
                     android:text="Sign Up"
+                    android:backgroundTint="@color/white"
                     android:textColor="@color/my_secondary"
                     android:textStyle="bold" />
 
